[metadata]
name = murano_artifact_plugin
description = An artifact plugin for murano packages
author = Alexander Tivelkov
author-email = ativelkov@mirantis.com
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Intended Audience :: Developers
    Environment :: Console

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
glance.artifacts.types =
    MuranoPackage = muranoartifact:VERSIONS
