[metadata]
name = murano_artifact_plugin
description = An artifact plugin for murano packages
author = Alexander Tivelkov
author-email = openstack-discuss@lists.openstack.org
python-requires = >=3.6
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Intended Audience :: Developers
    Environment :: Console

[entry_points]
glance.artifacts.types =
    MuranoPackage = muranoartifact:VERSIONS
