[metadata]
name = io.murano.plugins.cloudify
description = Murano-Cloudify integration plugin
summary = Plugin to deploy Tosca packages via Cloudify Manager with Murano
author = Trammell
author-email = trammell@gigaspaces.com

[files]
packages = murano_cloudify_plugin

[entry_points]
io.murano.plugins.packages =
    Cloudify.TOSCA/1.0 = murano_cloudify_plugin.cloudify_tosca_package:CloudifyToscaPackage

io.murano.extensions =
    cloudify.CloudifyClient = murano_cloudify_plugin.cloudify_client:CloudifyClient
