[metadata]
name = murano.plugins.magnum
description = Plugin to deploy a Magnum Bay to run docker containers on it.
summary = This plugin uses python-magnumclient to deploy a Magnum Bay. You can
          deploy any of Kubernetes, Swarm and Mesos cluster with it. Just specify
          'coe' to deploy cluster of your choice and run containers on it.
author = Madhuri Kumari
author-email = madhuri.kumari@intel.com

[files]
packages = magnum_plugin

[entry_points]
io.murano.extensions =
    mirantis.magnum.Magnum = magnum_plugin:MagnumClient
