[metadata]
name = murano.plugins.example
description = Example Plugin to extend collection of MuranoPL system classes
summary = An example Murano Plugin demonstrating extensibility of MuranoPL
          classes with code written in Python. This particular plugin uses
          python-glanceclient to call OpenStack Images API to list available
          images and return their ids to caller. Anther available method allows
          to get murano-related metadata from image with a given id.
author = Alexander Tivelkov
author-email = ativelkov@mirantis.com

[files]
packages = murano_exampleplugin

[entry_points]
io.murano.extensions =
    mirantis.example.Glance = murano_exampleplugin:GlanceClient
