[metadata]
name = io.murano.plugins.oasis.tosca
description = Heat-Translator Plugin for Murano
summary = This plugin enables import and deployment of OASIS TOSCA
          application specifications in Murano. The plugin makes use
          of tosca-parser pypi library for package imports and
          heat-translator pypi library for package deployment.
          Deployment support is not yet added and will come soon.
author = Vahid Hashemian
author-email = vahidhashemian@us.ibm.com

[files]
packages = murano_heat-translator_plugin

[entry_points]
io.murano.plugins.packages =
    TOSCA.CSAR/1.1.0 = plugin.csar_package:CSARPackage
